[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/level/Player.gd" type="Script" id=1]
[ext_resource path="res://textures/skins/player.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://textures/uis/pause.png" type="Texture" id=4]
[ext_resource path="res://textures/uis/right.png" type="Texture" id=5]
[ext_resource path="res://textures/uis/left.png" type="Texture" id=6]
[ext_resource path="res://textures/uis/jump.png" type="Texture" id=7]
[ext_resource path="res://fonts/default.tres" type="DynamicFont" id=8]
[ext_resource path="res://sounds/sfx/die2.wav" type="AudioStream" id=9]
[ext_resource path="res://default.tres" type="Theme" id=10]
[ext_resource path="res://scenes/prefabs/WinMenu.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.9, 16 )

[sub_resource type="RectangleShape2D" id=2]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.25098 )
position = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.32, 0.32 )
smoothing_enabled = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="GUI" instance=ExtResource( 3 )]

[node name="DeathCount" type="Label" parent="GUI"]
margin_right = 896.0
margin_bottom = 256.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 8 )
text = "Death Count: 0"
align = 1
valign = 1

[node name="TimeCount" type="Label" parent="GUI"]
margin_right = 896.0
margin_bottom = 64.0
theme = ExtResource( 10 )
text = "Time: 00:00:00"

[node name="Timer" type="Timer" parent="GUI/TimeCount"]
wait_time = 0.01
autostart = true

[node name="PauseButton" type="TextureButton" parent="GUI"]
pause_mode = 2
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_right = -80.0
margin_bottom = 40.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="TextureButton" parent="GUI"]
pause_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -202.0
margin_right = -160.0
margin_bottom = -162.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TextureButton" parent="GUI"]
pause_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -202.0
margin_right = -460.0
margin_bottom = -162.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpButton" type="TouchScreenButton" parent="GUI"]
position = Vector2( 0, 870 )
scale = Vector2( 13, 13 )
normal = ExtResource( 7 )
shape = SubResource( 2 )

[node name="WinMenu" parent="GUI" instance=ExtResource( 11 )]

[node name="LoseMenu" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="GUI/LoseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Text" type="Label" parent="GUI/LoseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -832.0
margin_top = -166.0
margin_right = 832.0
margin_bottom = 166.0
custom_fonts/font = ExtResource( 8 )
text = "You Lose!
You didn't finish first...
DeathCount: 
Total Score:
Coins:"
align = 1
valign = 1

[node name="ContinueButton" type="Button" parent="GUI/LoseMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -275.0
margin_top = -100.0
margin_right = 275.0
custom_fonts/font = ExtResource( 8 )
text = "Continue"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
bus = "SFXS"

[connection signal="timeout" from="GUI/TimeCount/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="GUI/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="GUI/LoseMenu/ContinueButton" to="." method="_on_ContinueButton_pressed"]
